# WDM_Super_Webapp

./: .gitignore  main.py  pyproject.toml  pytest.ini
backend/backend/: settings.py
docs/md/: project_structure.md  script_setup.md  script_testing.md
frontend/: package-lock.json
src/backend/accounts/: views.py
src/backend/backend/: settings.py  urls.py
src/frontend/: next.config.mjs  package-lock.json  package.json
src/frontend/src/app/: globals.css  layout.js  page.js
src/frontend/src/app/admin/: layout.js  page.js
src/frontend/src/app/api/chat/: route.js
src/frontend/src/app/auth/: layout.js
src/frontend/src/app/auth/login/: page.js
src/frontend/src/components/: LeftSideBar.js  RightSideBar.js
src/ml/app/: main.py
src/ml/app/graphql/: schema.py
src/ml/app/graphql/resolvers/: __init__.py
src/ml/app/models/: multimodal_rag.py
src/ml/app/models/generator/: chain.py
src/ml/app/models/processor/: WDM_processor.py  utils.py
src/ml/app/models/retriever/: hybrid_retriever.py
src/ml/app/models/retriever/database/: neo4j_client.py  qdrant_client.py
src/ml/app/routes/: chat.py
src/ml/app/tracking/: mlflow_logger.py
src/ml/configs/: ml_project_configs.py
src/ml/tests/db/: test_mlflow_connection.py  test_neo4j_connection.py  test_qdrant_connection.py
src/ml/tests/tools/: a.ipynb  test_wdm_parser.py
src/ml/utils/WDMParser/: WDMParser.py  extract_tables.py
