[project]
name = "multimodalrag-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2.23",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "langchain-core>=0.3.67",
    "langchain-google-vertexai>=2.0.27",
    "loguru>=0.7.3",
    "markdown>=3.8.2",
    "mlflow>=2.17.2",
    "neo4j>=5.28.1",
    "pymupdf>=1.26.1",
    "pytest>=8.3.5",
    "qdrant-client>=1.12.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
